# ghd_game_launcher

./: .gitignore  .qmlls.ini  AddNewWindow.qml  CMakeLists.txt  Main.qml  README.md  RoundedImage.qml  game.h  gamemanager.cpp  gamemanager.h  gamerepository.h  games.db  gamesession.h  main.cpp  resources.qrc
claude/: GameLauncher.pro  Main - Copy.qml  Main_back.qml  Main_wrong.qml  QUICK_START.md  README.md  cmakelists.ss  main.cpp  main.qml  qml.qrc
src/: gamemanager.cpp  gamesession.cpp  main.cpp  sqliterepository.cpp
src/include/: game.h  gamemanager.h  gamerepository.h  gamesession.h  sqliterepository.h
ui/components/: GHDButton.qml  GHDChart.qml  GHDTextField.qml  GHDToolButton.qml  GameCardDelegate.qml  GameListDelegate.qml  GridViewCard.qml  IconToolButton.qml  ListViewCard.qml  SearchBar.qml  SessionCard.qml
ui/theme/: Theme.qml
ui/utils/: Utils.qml
ui/windows/: AddGameWindow.qml  EditGameWindow.qml  Main.qml  SessionsListWindow.qml  Testing.qml
